# llvm-project

utils/bazel/llvm-project-overlay/libc/: BUILD.bazel
utils/bazel/llvm-project-overlay/libcxx/: BUILD.bazel
utils/bazel/llvm-project-overlay/libcxxabi/: BUILD.bazel
utils/bazel/llvm-project-overlay/mlir/: BUILD.bazel
